--- a/bank-churners-init-2.ipynb
+++ b/bank-churners-init-2.ipynb
@@ -197,6 +197,8 @@
    "outputs": [],
    "source": [
     "# número de clientes perdido y no perdidosn\n",
+    "#Prueba de commit\n",
+    "\n",
     "counts = df.Attrition_Flag.value_counts()\n",
     "perc_churn = (counts.iloc[1] / (counts.iloc[0] + counts.iloc[1])) * 100\n",
     "print(f'Churn Rate = {perc_churn:.1f}%')"
@@ -224,7 +226,7 @@
    },
    "outputs": [],
    "source": [
-    "# número de duplicados\n",
+    "\n",
     "duplicates = len(df[df.duplicated()])\n",
     "print(f'Number of Duplicate Entries: {duplicates}')"
    ]
