--- a/bank-churners-init-2.ipynb
+++ b/bank-churners-init-2.ipynb
@@ -314,10 +314,9 @@
     "intcols = df.select_dtypes(include = ['int64']).columns\n",
     "floatcols = df.select_dtypes(include = ['float64']).columns\n",
     "\n",
-    "# codificación \n",
     "df = pd.get_dummies(df, columns = catcols)\n",
     "   \n",
-    "print('New Number of Features: %d'%(df.shape[1]))  "
+    "print('New Numbers of Featuressss: %d'%(df.shape[1]))  "
    ]
   }
  ],
