--- a/bank-churners-init-2.ipynb
+++ b/bank-churners-init-2.ipynb
@@ -96,7 +96,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('.\\\\BankChurn.csv')\n"
+    "df = pd.read_csv('.\\\\BankChurn.csv')\n",
+    "#cambio juanseee"
    ]
   },
   {
@@ -196,8 +197,7 @@
    },
    "outputs": [],
    "source": [
-    "# número de clientes perdido y no perdidosn\n",
-    "#Prueba de commit\n",
+    "\n",
     "\n",
     "counts = df.Attrition_Flag.value_counts()\n",
     "perc_churn = (counts.iloc[1] / (counts.iloc[0] + counts.iloc[1])) * 100\n",
